
2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
the java-lattices project, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

~ -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

2014-06-28 Jean-François Viaud <jviaud@univ-lr.fr>
	* doc/tutorial/generate_tutorial.sh
		^ Correct classpath issues

2014-06-27 Christophe Demko <chdemko@gmail.com>
	* src/fr/kbertet/dgraph/package-info.java
	* src/fr/kbertet/lattice/Couple.iuml
	* src/fr/kbertet/lattice/Couple.java
	* src/fr/kbertet/lattice/Lattice.iuml
	* src/fr/kbertet/lattice/Lattice.java
	* src/fr/kbertet/lattice/Permutation.iuml
	* src/fr/kbertet/lattice/Permutation.java
		^ Setters return this for chaining

2014-06-27 Christophe Demko <chdemko@gmail.com>
	* doc/api/README.md
	* examples/Examples.java
	* src/fr/kbertet/dgraph/DGraph.java
	* src/fr/kbertet/dgraph/Node.java
	* src/fr/kbertet/lattice/BijectiveComponents.iuml
	* src/fr/kbertet/lattice/BijectiveComponents.java
	* src/fr/kbertet/lattice/ClosureSystem.java
	* src/fr/kbertet/lattice/Concept.java
	* src/fr/kbertet/lattice/ConceptLattice.iuml
	* src/fr/kbertet/lattice/ConceptLattice.java
	* src/fr/kbertet/lattice/ImplicationalSystem.java
	* src/fr/kbertet/lattice/Lattice.java
	* test/fr/kbertet/lattice/BijectiveComponentsTest.java
	* test/fr/kbertet/lattice/ConceptLatticeTest.java
		# Compute information at demand

2014-06-27 Christophe Demko <chdemko@gmail.com>
	* all files:
		^ Add fr.kbertet package prefix

2014-06-27 Christophe Demko <chdemko@gmail.com>
	* src/dgraph/DAGraph.java
	* src/dgraph/DGraph.java
	* src/dgraph/Node.java
	* src/dgraph/package-info.java
	* src/lattice/BijectiveComponents.java
	* src/lattice/ComparableSet.java
	* src/lattice/Concept.java
	* src/lattice/ConceptLattice.java
	* src/lattice/Lattice.java
	* src/lattice/Rule.java
		+ Comment TODO
